--- a/jsbasket/assets/css/style.css
+++ b/jsbasket/assets/css/style.css
@@ -1,14 +1,15 @@
-:root {
-  --color-light: #f8f9fa;
-}
-*{
-  box-sizing: border-box;
-}
-
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-  line-height: 1.7;
-  background-color: var(--color-light);
+  background-color: #e3e7e8;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+}
+.container {
+  width: 1000px;
+  margin: auto;
+  transition: 0.5s;
+}
+header{
+  display: grid;
+  grid-template-columns: 1fr 50px;
+  margin-top: 50px;
 }
