--- a/jsbasket/assets/css/style.css
+++ b/jsbasket/assets/css/style.css
@@ -13,3 +13,10 @@ header{
   grid-template-columns: 1fr 50px;
   margin-top: 50px;
 }
+header .shopping{
+  position: relative;
+  text-align: right;
+}
+header .shopping img{
+  width: 40px;
+}
