--- a/jsbasket/assets/css/style.css
+++ b/jsbasket/assets/css/style.css
@@ -20,3 +20,15 @@ header .shopping{
 header .shopping img{
   width: 40px;
 }
+header .shopping span{
+  background-color: red;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  position: absolute;
+  top: -5px;
+  left: 80%;
+  padding: 3px 10px;
+}
