--- a/jsbasket/assets/css/style.css
+++ b/jsbasket/assets/css/style.css
@@ -32,3 +32,11 @@ header .shopping span{
   left: 80%;
   padding: 3px 10px;
 }
+
+.list{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  column-gap: 20px;
+  row-gap: 20px;
+  margin-top: 50px;
+}
