--- a/jsbasket/assets/css/style.css
+++ b/jsbasket/assets/css/style.css
@@ -40,3 +40,24 @@ header .shopping span{
   row-gap: 20px;
   margin-top: 50px;
 }
+
+.card{
+   position: fixed;
+   top: 0;
+   left: calc(100% - 500px);
+   background-color: #453E3B;
+   height: 100vh;
+   transition: 0.5s;
+}
+.card h1{
+  color: #E8BC0E;
+  font-weight: 100;
+  margin: 0;
+  padding: 0 20px;
+  height: 80px;
+  display: flex;
+  align-items: center;
+}
+.card .chekOut{
+position: absolute;
+}
