--- a/jsbasket/assets/css/style.css
+++ b/jsbasket/assets/css/style.css
@@ -82,3 +82,11 @@ grid-template-columns: repeat(2, 1fr);
   color: #fff;
 
 }
+.active .card{
+left: calc(100% - 500px);
+
+}
+
+.active .container{
+  transform: translateX(-200px);
+}
