--- a/jsbasket/assets/css/style.css
+++ b/jsbasket/assets/css/style.css
@@ -94,5 +94,7 @@ left: calc(100% - 500px);
   text-align: center;
   background-color: #dce0e1;
   padding: 20px;
+  box-shadow: 0 50px #757676;
+  letter-spacing: 1px;
 
 }
