--- a/jsbasket/assets/css/style.css
+++ b/jsbasket/assets/css/style.css
@@ -94,7 +94,12 @@ left: calc(100% - 500px);
   text-align: center;
   background-color: #dce0e1;
   padding: 20px;
-  box-shadow: 0 50px #757676;
+  box-shadow: 0 50px 50px #757676;
   letter-spacing: 1px;
-
+}
+.list .item img{
+  width: 90%;
+}
+.list .item .title{
+  font-weight: 600;
 }
