--- a/jsbasket/assets/css/style.css
+++ b/jsbasket/assets/css/style.css
@@ -103,3 +103,12 @@ left: calc(100% - 500px);
 .list .item .title{
   font-weight: 600;
 }
+.list .item .price{
+  margin: 10px;
+}
+.list .item button{
+  background-color: #1C1F25;
+  color: #fff;
+  padding: 10px;
+  width: 100%;
+}
