--- a/jsbasket/assets/css/style.css
+++ b/jsbasket/assets/css/style.css
@@ -59,7 +59,7 @@ header .shopping span{
   display: flex;
   align-items: center;
 }
-.card .chekOut{
+.card .cehckOut{
 position: absolute;
 bottom: 0;
 width: 100%;
@@ -67,7 +67,7 @@ display: grid;
 grid-template-columns: repeat(2, 1fr);
 }
 
-.card .chekout div{
+.card .cehckOut div{
   background-color: #E8BC0E;
   width: 100%;
   height: 70px;
@@ -77,7 +77,7 @@ grid-template-columns: repeat(2, 1fr);
   font-weight: bold;
   cursor: pointer;
 }
-.card .chekOut div:nth-child(2){
+.card .cehckOut div:nth-child(2){
   background-color: #1C1F25;
   color: #fff;
 
