--- a/jsbasket/assets/css/style.css
+++ b/jsbasket/assets/css/style.css
@@ -125,3 +125,12 @@ left: calc(100% - 500px);
 .active .container{
   transform: translateX(-200px);
 }
+.card h1{
+  color: #E8BC0E;
+  font-weight: 100;
+  margin: 0;
+  padding: 0 20px;
+  height: 80px;
+  display: flex;
+  align-items: center;
+}
